--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="price">가격</string>
     <string name="add">등록</string>
     <string name="used_items">상품 목록</string>
+    <string name="edit_item">판매글 수정</string>
+    <string name="edit">수정</string>
 </resources>
