--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="used_items">상품 목록</string>
     <string name="edit_item">판매글 수정</string>
     <string name="edit">수정</string>
+    <string name="content">설명</string>
 </resources>
