상세페이지 초초초기 작업

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="edit_item">판매글 수정</string>
     <string name="edit">수정</string>
     <string name="content">설명</string>
+    <string name="detail">글 상세보기</string>
+    <string name="send_message">메시지 보내기</string>
 </resources>
